Add remaining topics

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -513,4 +513,230 @@ Apologetics:
     - Proof of the Trinity – Genesis 5: Genesis-5
     - Proof of Jesus in the ordering of the 12 tribes in the wilderness - Numbers 2: Numbers-2
     - Response to the Documentary Hypothesis – Deuteronomy 1: Deuteronomy-1
-
+End Times:
+  End Time Revelations:
+    - End time revelations from the Flood - Genesis 7:  Genesis-7
+    - End time revelations from Nimrod - Genesis 10: Genesis-10
+    - End time revelations from the war of the nine kings - Genesis 14: Genesis-14
+    - End time revelations from Sodom’ judgment - Genesis 19: Genesis-19
+    - End time revelations from Egypt’s seven-year tribulation - Genesis 41: Genesis-41
+    - End time revelations from Egypt’s 10 plagues - Exodus 11:  Exodus-11
+    - End time revelations from Pharaoh’s judgment - Exodus 14: Exodus-14
+    - End time revelations from Pharaoh’s judgment - Exodus 15: Exodus-15
+    - End time Tabernacle revelations on the Millennial Reign - Exodus 35: Exodus-35
+    - End time revelations from Balaam’s prophecies - Numbers 23-24: Numbers-23-24
+    - End time revelations from the Midianites’ judgement - Numbers 31: Numbers 31
+    - End time revelations from Jericho’s judgment - Joshua 6: Joshua-6
+    - End time revelations from Joshua’s battle for Northern Israel - Joshua 11: Joshua-11
+    - End time revelations from the Amorites’ judgment - Joshua 10: Joshua-10
+    - End time revelations from Abimelech’s evil reign - Judges 9: Joshua-9
+    - End time revelations from the Philistine god Dagon’s judgment – 1 Samuel 5: 1-Samuel-5
+    - End time revelations from Absalom’s defeat – 2 Samuel 18: 2-Samuel-18
+    - End time revelations from Solomon’s fall – 1 Kings 10: 1-Kings-10
+    - End time revelations from five wicked kings of Northern Israel – 1 Kings 16: 1-Kings-16
+    - End time revelations from the kings of Israel and Judah - 2 Kings 15 : 2-Kings-15
+  The Rapture of the Church:
+    - Enoch’s rapture - Genesis 5: Genesis-5 
+    - The rapture foreshadowed in the Egyptian plagues - Exodus 11: Exodus-11
+    - Jesus’ two ascents to heaven foreshadowed at Mount Horab - Exodus 19: Exodus-19
+    - The rapture foreshadowed in Rosh HaShanah – Leviticus 23:23-32: Leviticus-23.23-32
+    - The hope in Jesus’ return from the promise of Boaz’s return - Ruth 3: Ruth-3
+    - Elijah’s rapture - 2 Kings 2: 2-Kings-2
+Sin:
+  Understanding Sin:
+    - Identifying the seven stages of sin - Leviticus 13: Leviticus-13
+    - Seven lessons on how sin spreads - Judges 18 : Judges-18
+    - The seven causes and consequences of rebellion – Numbers 16  : Numbers-16
+  Pride / Vanity:
+    - Miriam’s pride leads to leprosy – Numbers 12: Numbers-12
+    - Seven lessons from Gideon on the dangers of pride- Judges 8: Judges-8
+    - Saul’s prideful failure to give credit to God – 1 Samuel 13: 1-Samuel-13
+    - Hushai plays upon Absalom’s vanity to cause his defeat – 2 Samuel 17: 2-Samuel-17
+    - Adonijah seized David’s throne out pride. – 1 Kings 1: 1-Kings-1
+    - Rehoboam’s pride leads to Israel’s division – 1 Kings 12: 1-Kings-12
+    - God judges Baasha for his pride – 1 Kings 16: 1-Kings-16
+    - Jehu’s pride in judging others – 2 Kings 10: 2-Kings-10
+    - King Sennacherib’s pride before God – 2 Kings 19: 2-Kings-19
+    - From Uzziah, seven warnings regarding pride - 2 Chronicles 26: 2-Chronicles-26
+  Covetousness, Jealousy, Lust and Greed:
+    - Laban covets and tries to steal Jacob’s blessings – Genesis 29: Genesis-29
+    - Reuben’s sleeps with of his father’s concubine -  Genesis 35 : Genesis-35
+    - Judah’s sleeping with his daughter-in-law - 	Genesis 38: Genesis-38
+    - The Jews hoard mana in the wilderness – Exodus 16: Exodus-16
+    - The Jews hoard meat in the wilderness – Numbers 11: Numbers-11
+    - Miriam and Aaron covet Moses’ authority – Numbers 12: Numbers-12
+    - Kohah and others covet Moses’ authority - Numbers 16: Numbers-16
+    - Balaam’s covetousness and other sins – Numbers 22: Numbers-22
+    - Seven warnings regarding coveting from Achan – Joshua 7: Joshua-7
+    - Saul’s jealousy over David’s blessings – 1 Samuel 18: 1-Samuel-18
+    - David’s covetousness with his first six wives - 2 Samuel 3: 2-Samuel-3
+    - David lust for Bathsheba - 2 Samuel 11: 2-Samuel-11
+    - Amnon’s rapes sister Tamar – 2 Samuel 13: 2-Samuel-13
+    - Absalom’s covets David’s power – 2 Samuel 15: 2-Samuel-15
+    - Absalom’s rapes David’s concubines – 2 Samuel 16: 2-Samuel-16
+    - Joab’s jealousy and murder of Amasa – 2 Samuel 20: 2-Samuel-20
+    - Seven warnings regarding covetousness from Solomon - 1 Kings 11: 1-Kings-11
+    - Ahab covets and steals Naboth’s lands – 1 Kings 21: 1-Kings-21
+    - Gehazi’s covets and steals gifts for God – 2 Kings 5: 2-Kings-5
+  Idolatry:
+    - The Second Commandment - Deuteronomy 5:8-10: Deuteronomy-5.8-10
+    - Rachel’s trusts in her idol – Genesis 31: Genesis-31
+    - The Jews’ idolatry with the golden calf  - Exodus 32: Exodus-32
+    - Idolatry leads to bondage – Judges 3: Judges-3
+    - Micah’s idolatry and counterfeit religion – Judges 17: Judges-17
+    - The tribe of Dan’s idolatry and counterfeit religion – Judges 18: Judges-18
+    - The Jews misuse the ark as an idol – 1 Samuel 4: 1-Samuel-4
+    - Solomon’s idolatry  - 1 Kings 11: 1-Kings-11
+    - Jeroboam’s idolatry – 1 Kings 12: 1-Kings-12
+    - Rehoboam’s idolatry – 1 Kings 14: 1-Kings-14
+    - Baasha’s idolatry – 1 Kings 15: 1-Kings-15
+    - Ahab’s idolatry and Baal worship – 1 Kings 16: 1-Kings-16
+    - Jehoram’s idolatry and Baal worship in Northern Israel – 2 Kings 3: 2-Kings-3
+    - Jehoram introduces Baal worship to Judah – 2 Kings 8: 2-Kings-8
+    - Ahaz’s idolatry – 2 Kings 16: 2-Kings-16
+    - Northern Israel’s idolatry leads to exile - 2 Kings 17: 2-Kings-17
+    - Manasseh and Amon’s idolatry – 2 Kings 21: 2-Kings-21
+  Doubt / Disbelief / Faithlessness:
+    - Sarai and Abraham doubt God’s promises – Genesis 16: Genesis-16
+    - Moses’ doubt in God’s promises – Exodus 4: Exodus-4
+    - The Jews’ disbelief in Moses’ calling – Exodus 5: Exodus-5
+    - The Jews doubt God at the edge of the Promised Land – Numbers 13: Numbers-13
+    - The seven consequences of faithlessness -Numbers 14: Numbers-14
+    - The Jews’ doubt in failing to drive out the Canaanites -Judges 1: Judges-1
+    - Gideon’s initial doubt in God’s calling – Judges 6: Judges-6
+    - Saul disobeys God with the Amalekites – 1 Samuel 15: 1-Samuel-15
+    - David doubts God’s protection after Saul’s attacks – 1 Samuel 27: 1-Samuel-27
+    -	David doubts God’s protection after sinning – 2 Samuel 16: 2-Samuel-16
+    - Asa doubts God and forms an alliance with the Assyrians – 1 Kings 15: 1-Kings-15
+    - Ahaz doubts God and forms an alliance with the Assyrians – 2 Kings 16: 2-Kings-16
+    - Hezekiah doubts God and turns to Babylonian – 2 Kings 20: 2-Kings-20
+    - Judah’s leaders doubt God and turn to Egypt – 2 Kings 24: 2-Kings-24
+  Cruelty / Strife / Oppression:
+    - Joseph’s brothers sell him into slavery – Genesis 37 : Genesis-37
+    - Judah’s threat to burn Tamar – Genesis 38: Genesis-38
+    - Pharaoh enslaves and tries to kill the Jews – Exodus 1: Exodus-1
+    - Peninnah’s cruelty toward Hannah – 1 Samuel 1: 1-Samuel-1
+    - Amnon’s cruelty after raping Tamar – 2 Samuel 13: 2-Samuel-13
+    - Rehoboam’s cruelty leads to Israel’s division  - 1 Kings 12: 1-Kings-12
+    - Judah and Israel live in ongoing strife – 1 Kings 14: 1-Kings-14
+    - Baasha’s war with Judah – 1 Kings 15: 1-Kings-15
+    - The cruelty in Northern Israel without God – 1 Kings 16: 1-Kings-16
+    - Jehu’s cruelty to Ahab’s sons and advisors – 2 Kings 10: 2-Kings-10
+  Lies / Deceit / Blame:
+    - Satan deceives Adam and Eve– Genesis 3: Genesis-3
+    - Abraham lies about his wife – Genesis 20:  Genesis-20
+    - Isaac lies about his wife – Genesis 26: Genesis-26
+    - Jacob and Rebekah deceive Isaac – Genesis 27: Genesis-27
+    - Laban deceives Jacob – Genesis 29: Genesis-29
+    - Jacob lies to Esau – Genesis 33: Genesis-33
+    - Simeon and Levi’s deceive the Shechemites – Genesis 34: Genesis-34
+    - Joseph’s brothers’ deceive Jacob– Genesis 37: Genesis-37
+    - The Gibeonites’ deceive the Jews  - Joshua 9: Joshua-9
+    -	Samson and the Philistines deceive each other – Judges 14: Judges-14
+    -	David’s lies and deception in the wilderness – 1 Samuel 27: 1-Samuel-27
+    -	Saul deceives a witch – 1 Samuel 28: 1-Samuel-28
+    -	David’s deceit in his adultery and murder of Uriah – 2 Samuel 11: 2-Samuel-11
+    -	Jeroboam uses deception to speak to God’s prophet - 1 Kings 14: 1-Kings-14
+    -	Jezebel lies to kill Naboth and take his lands – 1 Kings 21 : 1-Kings-21
+    -	Gehazi’s lies in stealing gifts for God – 2 Kings 5	: 2-Kings-5
+    -	Jehu uses deceit to execute the Baal worshipers – 2 Kings 10: 2-Kings-10
+  Dual-Mindedness /Compromise/ Worldliness:
+    - Lot’s family’s worldliness  – Genesis 19: Genesis-19
+    - Jacob’s family’s worldliness  – Genesis 34: Genesis-34
+    - Judah’s family’s worldliness  - Genesis 38: Genesis-38
+    - Rachel’s dual-mindedness – Genesis 31: Genesis-31
+    - Esau dual-mindedness - Genesis 36: Genesis-36
+    - Seven consequences from being double minded - Numbers 32: Numbers-32
+    - Choosing a spiritual inheritance over the worldliness - Joshua 13: Joshua-13
+    - The Jews’ compromises with the Canaanites -Judges 1: Judges-1
+    - Samson’s worldliness.  – Judges 14: Judges-14
+    -	The Jews’ compromises with the Philistines – Judges 15: Judges-15
+    -	Seven warnings against relative morality - Judges 21 : Judges-21
+    -	David compromises while living with the Philistines – 1 Samuel 27: 1-Samuel-27
+    -	Saul turns to deceit and a medium for guidance – 1 Samuel 28: 1-Samuel-28
+    -	Seven warnings against mixing the Spirit with the flesh - 2 Samuel 3: 2-Samuel-3
+    -	Seven warnings about the flesh from the collapse of Saul’s house- 2 Samuel 4: 2-Samuel-4
+    -	Solomon’s worldliness – 1 Kings 11: 1-Kings-11
+    -	Seven warnings from Jeroboam and Rehoboam on life without God -1 Kings 14: 1-Kings-14
+    -	Elijah’s warning regarding dual allegiances – 1 Kings 18: 1-Kings-18
+    - Seven signs from Jehu of serving God with the wrong motives - 2 Kings 10: 2-Kings-10
+    -	Seven deadly worldly sins that will corrupt you - 2 Kings 16: 2-Kings-16
+  Unforgiveness / Revenge / Hatred / Retaliation:
+    -	Seven causes and consequences of rebellion - Numbers 16 : Numbers-16
+    -	Samson’s vengeance against the Philistines - Judges 14: Judges-14
+    -	Samson’s revenge against the Philistines - Judges 15: Judges-15
+    -	Israel’s first civil war - Judges 20: Judges-20
+    - Saul conspires to kill David – 1 Samuel 19: 1-Samuel-19
+    -	Joab murders Abner out of vengeance – 2 Samuel 3: 2-Samuel-3
+    -	Absalom’s revenge murder of his brother Amnon – 2 Samuel 13: 2-Samuel-13
+    -	Shimei hatred and unforgiveness of David – 2 Samuel 16: 2-Samuel-16
+    -	Rehoboam’s unforgiveness divides Israel – 2 Kings 12: 2-Kings-12
+  Anger / Murder:
+    -	Cain murder Abel – Genesis 4: Genesis-4
+    -	Esau’ threat to kill Isaac – Genesis 27: Genesis-27
+    -	Simeon and Levi’s murder the Shechemites – Genesis 34: Genesis-24
+    -	Joseph’s brothers’ plot to kill him– Genesis 37: Genesis-37
+    -	Pharaoh tries to murder the Jewish boys – Exodus 1: Exodus-1
+    -	Moses murders an Egyptian – Exodus 2: Exodus-2
+    - Saul tries to murder David (Part I) – 1 Samuel 18: 1-Samuel-18
+    -	Saul tries to murder David (Part II) – 1 Samuel 19: 1-Samuel-19
+    -	Saul murders the high priest – 1 Samuel 22: 1-Samuel-22
+    -	David’s plan to murder Nabal for disrespect – 1 Samuel 25: 1-Samuel-25
+    -	Joab murders Abner – 2 Samuel 3: 2-Samuel-3
+    -	Ish-bosheth’s commanders murder him – 2 Samuel 4: 2-Samuel-4
+    -	David murders Uriah – 2 Samuel 11: 2-Samuel-11
+    -	Absalom murders his brother Amnon – 2 Samuel 13: 2-Samuel-3
+    -	Joab murders Amasa – 2 Samuel 20: 2-Samuel-3
+    -	Solomon tries to murder Jeroboam – 1 Kings 11: 2-Kings-11
+    -	Zimri murders Baasha’s son Elah – 1 Kings 16: 2-Kings-16
+    -	Ahab and Jezebel murder Naboth – 1 Kings 21: 2-Kings-21
+    -	Manasseh persecutes and murders God’s people – 2 Kings 21:  2-Kings-21
+  Complaining / Murmuring:
+    -	The Jews’ complaints in the wilderness (Part I) – Exodus 16: Exodus-16
+    -	The Jews’ complaints in the wilderness (Part II) -  Numbers 11: Numbers-11
+    -	The Jews’ complaints in the wilderness (Part III) -  Numbers 20: Numbers-20
+  Gossip / Slander: 
+    -	Jesus’  9th Commandment (false testimony)-  Deuteronomy 5:20 : Deuteronomy-5.20
+    -	Miriam and Aaron gossip against Moses - Numbers 12: Numbers-12 
+    -	Korah slanders Moses – Numbers 16: Numbers-16
+    -	Jezebel slanders Naboth to kill him – 1 Kings 21: 1-Kings-21
+  Spiritual Blindness: 
+    -	Spiritual blindness in Sodom and Gomorrah – Genesis 19: Genesis-19
+    -	Isaac’s spiritual blindness – Genesis 27: Genesis-27
+    -	The dangers of walking by sight - Joshua 9: Joshua-9
+    -	Samson’s spiritual blindness - Judges 16: Joshua-16
+    -	Eli’s spiritual blindness - 1 Samuel 3: 1-Samuel-3
+    -	David’s blindness in wanting to fight the Jews – 1 Sam. 29: 1-Samuel-29
+    -	Ahab’s spiritual blindness (Part I) – 1 Kings 18 : 1-Kings-18
+    -	Ahab’s spiritual blindness (Part II) – 1 Kings 21: 1-Kings-21
+    -	The spiritual blindness of Judah’s final rulers – 2 Kings 25: 2-Kings-25
+  Presumption: 
+    -	The Jews’ presumption in attacking the Promised Land - Deuteronomy 1: Deuteronomy-1
+    -	The Jews’ presumption with the ark – 1 Samuel 4.: 1-Samuel-4
+    -	Saul’s presumption in making his own sacrifices – 1 Samuel 13: 1-Samuel-13
+  Drunkenness: 
+    -	God’s warning to Aaron about alcohol - Lev. Chapter 10: Leviticus-10 
+    -	The Nazirite vow not to drink – Numbers 6: Numbers-6
+    -	Samson’s drunkenness – Judges 14: Judges-14 
+  Disobedience / Rebellion / Refusing to Submit to God: 
+    -	The Jews’ rebellion at Marah – Exodus 15: Exodus-15
+    -	The Jews’ rebellion at Rephidim – Exodus 17: Exodus-17
+    -	The 10 faithless spies and the Jews rebellion – Numbers 13: Numbers-13
+    -	The seven causes and consequences of rebellion – Numbers 16: Numbers-16
+    -	Samson disregards his a Nazarite vows -  Judges 14: Judges-14
+    -	Micah’s rebellion with his counterfeit religion – Judges 17: Judges-17
+    -	Dan’s rebellion with its counterfeit religion – Judges 18: Judges-18
+    -	Seven consequences to a society that rejects God’s Word - Judges 19: Judges-19
+    - Saul’s disobedience in destroying the Amalekites – 1 Samuel 15: 1-Samuel-15
+    -	Seven warnings regarding rebellious leaders from Saul - 1 Samuel 31 : 1-Samuel-31
+    -	Absalom’s rebellion against his father David – 2 Samuel 15 : 2-Samuel-15
+    -	Uzzah’s disobedience in touching the ark – 2 Samuel 6: 2-Samuel-6
+    -	Seven evils that appear when God’s Leaders are removed - 2 Samuel 16: 2-Samuel-16
+    -	Sheba’s rebellion against King David – 2 Samuel 20: 2-Samuel-20
+    -	David’s disobedience in ordering a census – 2 Samuel 24: 2-Samuel-24
+    -	Adonijah’s rebellion against King David and Solomon. – 1 Kings 1: 1-Kings-1
+    -	Solomon’s rebellion against God – 1 Kings 11: 1-Kings-11
+    -	Jeroboam’s rebellion against God – 1 Kings 13: 1-Kings-13
+    -	God judges Ahab for his disobedience – 1 Kings 20 : 1-Kings-20
+    -	Seven lessons from Joash’s mistakes on avoiding disobedience - 2 Kings 12: 2-Kings-12
+    -	From Ahaz’s reign, seven signs of a rebellious nation - 2 Chronicles 28: 2-Chronicles-28
