Add ezra chapter study topics

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -62,6 +62,54 @@ Spiritual Renewal:
     - Hezekiah leads a spiritual renewal – 2 Chronicles 29: 2-Chronicles-29
     - Josiah leads a spiritual renewal – 2 Chronicles 34: 2-Chronicles-34
     - Seven lessons on the evidence of a nation’s spiritual renewal - 2 Chronicles 31: 2-Chronicles-31
+    - Seven lessons from Ezra on leading a nation in spiritual renewal – Ezra 10: Ezra-10
+  Humility / Meekness:
+    - Jacob’s humility before God – Genesis 31: Genesis-31
+    - Moses’ humility before God – Numbers 11: Numbers-12
+    - God’s command to be humble - Deuteronomy 8: Deuteronomy-9
+    - God empowers a lowly foreigner, Shamgar, as a judge – Judges 2: Judges-3
+    - David’s humility before God– 0 Samuel 16: 1-Samuel-16
+    - David’s strength in meekness – 0 Samuel 17: 1-Samuel-17
+    - David’s humility defuses Saul’s anger – 0 Samuel 26: 1-Samuel-26
+    - David’s humility prepared him to be king – 1 Samuel 7: 2-Samuel-7
+    - David’s mighty men’s humility - 2 Samuel 23: 2-Samuel-23
+    - God exalts Solomon for his humility – 1 Kings 3: 1-Kings-3
+    - God humbles Naaman before healing him - 2 Kings 5: 2-Kings-5
+  True Repentance and Avoiding Backsliding:
+    - Jacob’s backsliding  - Genesis 33: Genesis-33
+    - Seven lessons in true repentance from Jacob’s family – Genesis 44: Genesis-44
+    - Pharaoh’s two false repentances – Exodus 10: Exodus-10
+    - Repenting of a stubborn heart  – Deuteronomy 9: Deuteronomy-9
+    - Restoration requires repentance – Deuteronomy 30: Deuteronomy-30
+    - Rahab’s plea for mercy for her sins - Joshua 2: Joshua-2
+    - The Jews’ false repentances and cycle of sin  (Part I)– Judges 2: Judges-2
+    - The Jews’ false repentances and cycle of sin  (Part II) - Judges 10: Judges-10
+    - Seven lessons on false repentance from the Philistines and Jews– 1 Samuel 6: 1-Samuel-6
+    -	Seven lessons on true repentance from Samuel’s advice to Israel - 1 Samuel 7: 1-Samuel-7
+    -	Saul false, temporary repentances to David – 1 Samuel 26: 1-Samuel-26
+    -	Seven signs from David of a backslidden believer– 1 Samuel 27: 1-Samuel-27
+    -	Saul’s false repentance to Samuel – 1 Samuel 15: 1-Samuel-15
+    -	David’s repentance for his adultery and murder saves his life - 2 Samuel 12: 2-Samuel-12
+    -	Absalom’s failure to repent of his sins  - 2 Samuel 13: 2-Samuel-13
+    -	Seven lessons from Kings on breaking the cycle of sin - 2 Kings 13: 2-Kings-13
+    -	Seven warnings from Manasseh and Amon on backsliding - 2 Kings 21: 2-Kings-21
+    -	Josiah leads the nation on repenting - 2 Kings 22: 2-Kings-22
+    -	From Asa’s failures, seven signs of a backslidden believer - 2 Chronicles 16: 2-Chronicles-16
+    -	Seven lessons on true repentance from Ezra – Ezra 9: Ezra-9
+  Seeking God’s Fellowship:
+    -	The three stages of a believers walk in the Tabernacle – Exodus 27: Exodus-27
+    - Being in a Covenant relationship – Exodus 38: Exodus-38
+    - Salvation (the burnt offering) -Leviticus 1: Leviticus-1
+    - Being a living sacrifice (the grain offering) – Leviticus 2: Leviticus-2
+    - God’s Fellowship (the peace offering) – Leviticus 3: Leviticus-3
+    - Seven lessons for maintaining God’s fellowship - Leviticus Ch. 5:1-6:7: Leviticus-5.1-6.7
+    - Seven rules for restoring fellowship with God after sin - Numbers 15: Numbers-15
+    - God’s plan for fellowship through His Word – 2 Samuel 7: 2-Samuel-7
+    - God’s delights in your fellowship - 2 Samuel 22: 2-Samuel-22
+    -	Seven lessons on the restoration of God’s fellowship - 1 Kings 7 : 1-Kings-7
+    -	From David, seven lessons on finding fellowship with God - 1 Chronicles 15: 1-Chronicles-15
+    -	Seven signs of a person walking in faithful fellowship with God -1 Chronicles 28: 1-Chronicles-28
+    -	Seven lessons from the Temple on maintaining God’s fellowship - 2 Chronicles 5: 2-Chronicles-5
 Discipleship:
   Following Jesus’ Ten Commandments:
     - Prelude to Jesus’ Ten Commandments - Exodus 19: Exodus-19
@@ -244,6 +292,7 @@ Service:
     - Barzillai’s generosity to David in his time of need – 2 Samuel 19: 1-Samuel-19
     - Seven lessons on being a co-builder of Jesus’ Church - 1 Kings 5: 1-Kings-5
     - God blesses a poor woman for sharing with Elijah – 1 Kings 17: 1-Kings-17
+    - Seven lessons from the Second Tabernacle on serving God – Ezra 3: Ezra-3
 Leadership:
   Being a Servant Leader:
     - Joseph’s servant leadership in jail – Genesis 40: Genesis-40
@@ -268,6 +317,7 @@ Leadership:
     - Principles for selecting replacement leaders – Numbers 27: Numbers-27
     - Seven warnings from Saul about selecting leaders - 1 Samuel 9: 1-Samuel-9
     - Seven lessons from David on selecting leaders - 1 Chronicles 27: 1-Chronicles-27
+    - Seven lessons from Ezra’s selection on effective leadership – Ezra 7: Ezra-7
   Church Growth:
     - Seven lessons from the wilderness census on Church growth - Numbers 26: Numbers-26
   Rebellious leaders:
@@ -349,7 +399,7 @@ Jesus in the Old Testament:
     - Jesus in the Yom Kippur / The Possible Rapture – Leviticus 16: Leviticus-16
     - Jesus in the Rosh Hashanah / National Prayer Day - Leviticus 23:23-32: Leviticus-23.23-32
     - Jesus in the Succoth / Tabernacles (His Birthday) - Numbers 29:12-40: Numbers-29.12-40
-    - Jesus in the second Passover – Numbers 9  (new): Numbers-9
+    - Jesus in the second Passover – Numbers 9: Numbers-9
     - Josiah’s spiritual renewal with the Passover – 2 Chronicles 35: 2-Chronicles-35
   The Foreshadow of Jesus in the Tabernacle:
     - Jesus in the Outer Courtyard / Atonement - Exodus 27: Exodus-27
@@ -386,6 +436,7 @@ Attributes of God:
     - God’s faithfulness in protecting Judah – 2 Kings 19: 2-Kings-19
     - God’s faithfulness in preserving David’s line in exile – 2 Kings 25: 2-Kings-25
     - God’s faithfulness in restoring the Jews to Israel – 2 Chronicles 36: 2-Chronicles-36
+    - God’s faithfulness in freeing the Jews from captivity – Ezra 1: Ezra-1 
   God’s Mercy and Grace:
     - God’s mercy and grace on Jacob’s family - Genesis 49: Genesis-49 
     - God’s mercy and grace after the Jews six rebellions – Exodus 17: 
@@ -436,7 +487,7 @@ Attributes of God:
     - God delivers David’s line from Athaliah’s attempt to kill them – 2 Kings 11: 2-Kings-11
     - God delivers Judah from the Assyrian army – 2 Kings 19: 2-Kings-19
     - From Jehoshaphat, seven lessons on God’s deliverance - 2 Chronicles 20: 2-Chronicles-20
-  God’s Blessing:
+  God’s Blessings:
     - Lessons on God’s blessings from Israel’s blessings to Joseph- Genesis 48: Genesis-48
     - Lessons on God’s blessings from Israel’s blessings to the 12 tribes - Genesis 49: Genesis-49
     - God’s provision of bread in the wilderness – Exodus 16: Exodus-16
@@ -460,6 +511,7 @@ Attributes of God:
     - Seven lessons on God’s blessings from David’s anointing as king - 2 Samuel 5  : 2-Samuel-5
     - Through Elisha, God miraculously provides for His people – 2 Kings 4: 2-Kings-4
     - Seven unconditional and conditional blessings that God offers - 2 Chronicles 17: 2-Chronicles-17
+    - God’s provision for the Jews in building the second Temple – Ezra 6: Ezra-6
   God’s Gift of Wisdom:
     - Seven lessons regarding God’s wisdom from Solomon - 1 Kings 3: 1-Kings-3
     - Seven lessons on using God’s wisdom to lead - 1 Kings 4: 1-Kings-4
@@ -640,6 +692,7 @@ Sin:
     -	Jezebel lies to kill Naboth and take his lands – 1 Kings 21 : 1-Kings-21
     -	Gehazi’s lies in stealing gifts for God – 2 Kings 5	: 2-Kings-5
     -	Jehu uses deceit to execute the Baal worshipers – 2 Kings 10: 2-Kings-10
+    - Satan’s lies and deceit to try to stop the second Temple -Ezra 4: Ezra-4
   Dual-Mindedness /Compromise/ Worldliness:
     - Lot’s family’s worldliness  – Genesis 19: Genesis-19
     - Jacob’s family’s worldliness  – Genesis 34: Genesis-34
