Fix slug typos in topic index

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -378,7 +378,7 @@ Spiritual Warfare:
     - Spiritual warfare lessons from Israel’s civil war (Part VIII) - 2 Samuel 2: 2-Samuel-2
     - Spiritual warfare lessons from David’s victories (Part IX) - 2 Samuel 10: 2-Samuel-10
     - Spiritual warfare lessons from the war against Moab (Part X) - 2 Kings 3: 2-Kings-3
-    - Spiritual warfare lessons from Elisha (Part XI) - 2 Kings: 2-Kings
+    - Spiritual warfare lessons from Elisha (Part XI) - 2 Kings: 2-Kings-6
 Stewardship:
   Lessons on Tithing:
     - "Abraham’s tithes - Genesis 14": Genesis-14
@@ -431,7 +431,7 @@ Attributes of God:
     - God’s fulfilled promises to Abraham – Joshua 1: Joshua-1 
     - God’s fulfilled promise in making David king - 2 Samuel 5: 2-Samuel-5
     - God fulfills His land promises through David - 2 Samuel 8: 2-Samuel-8 
-    - David’s praise for God’s faithfulness  - Samuel 22: Samuel-22
+    - David’s praise for God’s faithfulness  - Samuel 22: 1-Samuel-22
     - God’s faithfulness during Judah’s unfaithfulness – 2 Kings 8: 2-Kings-8
     - God’s faithfulness in protecting Judah – 2 Kings 19: 2-Kings-19
     - God’s faithfulness in preserving David’s line in exile – 2 Kings 25: 2-Kings-25
@@ -439,7 +439,7 @@ Attributes of God:
     - God’s faithfulness in freeing the Jews from captivity – Ezra 1: Ezra-1 
   God’s Mercy and Grace:
     - God’s mercy and grace on Jacob’s family - Genesis 49: Genesis-49 
-    - God’s mercy and grace after the Jews six rebellions – Exodus 17: 
+    - God’s mercy and grace after the Jews six rebellions – Exodus 17: Exodus-17
     - God’s mercy and grace after the golden calf – Exodus 34: Exodus-34
     - God’s mercy and grace on the 12 tribes – Numbers 1:17-54: Numbers-1.17-54
     - God’s mercy and grace in the red heifer – Numbers 19: Numbers-19
@@ -577,7 +577,7 @@ End Times:
     - End time revelations from Pharaoh’s judgment - Exodus 15: Exodus-15
     - End time Tabernacle revelations on the Millennial Reign - Exodus 35: Exodus-35
     - End time revelations from Balaam’s prophecies - Numbers 23-24: Numbers-23-24
-    - End time revelations from the Midianites’ judgement - Numbers 31: Numbers 31
+    - End time revelations from the Midianites’ judgement - Numbers 31: Numbers-31
     - End time revelations from Jericho’s judgment - Joshua 6: Joshua-6
     - End time revelations from Joshua’s battle for Northern Israel - Joshua 11: Joshua-11
     - End time revelations from the Amorites’ judgment - Joshua 10: Joshua-10
