Add missing exodus and genesis studies

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -28,7 +28,7 @@ Faith:
     - God tests Abraham's faith - Genesis 12: Genesis-12
     - God tests Isaac's faith - Genesis 26: Genesis-26
     - God tests Joseph's faith - Genesis 39: Genesis-39
-    - God tests Jacob's family - Genesis 42: Genesis:42
+    - God tests Jacob's family - Genesis 42: Genesis-42
     - Joseph tests his brothers - Genesis 44: Genesis-44
     - God tests the Jews in Egypt - Exodus 5: Exodus-5
     - God tests the Jews in the wilderness - Exodus 17: Exodus-17
@@ -40,7 +40,7 @@ Faith:
     - David's testing as king - 2 Samuel 24: 2-Samuel-24
     - Elijah's testing in the wilderness (Part I) - 1 Kings 17: 1-Kings-17
     - Elijah's testing in the wilderness (Part II) - 1 Kings 19: 1-Kings-19
-    - Micaiah testing in speaking God's Word - 1 Kings 22: 1-Kinds-22
+    - Micaiah testing in speaking God's Word - 1 Kings 22: 1-Kings-22
     - Elijah tests Elisha before his rapture - 2 Kings 2: 2-Kings-2
 Spiritual Renewal:
   Spiritual Renewal / Transformation:
@@ -53,7 +53,7 @@ Spiritual Renewal:
     - Lessons on transformation from the circumcision – Leviticus 12: Leviticus-12
     - Seven signs of a transformed believer – Leviticus 19: Leviticus-19
     - Spiritual renewal through God’s holy days - Numbers 28:1-15: Numbers-28.1-15
-    - Joshua leads a spiritual renewal – Joshua 6:
+    - Joshua leads a spiritual renewal – Joshua 6: Joshua-6
     - God transform Naomi’s bitter heart - Ruth 2: Ruth-2
     - The seven stages of a believer’s transformation - 1 Samuel 10: 1-Samuel-10
     - DSeven lessons on spiritual renewal from David’s wilderness victory – 1 Samuel 30: 1-Samuel-30
@@ -257,7 +257,7 @@ Service:
   Love and Compassion:
     - Abraham’s compassion for strangers – Genesis 18: Genesis-18
     - Joseph’s compassion in jail – Genesis 40: Genesis-40
-    - God’s law of love for immigrants, the poor and strangers - Exodus 22:21: Exodus-22.21
+    - God’s law of love for immigrants, the poor and strangers - Exodus 22:21: Exodus-22
     - God’s law of love for orphans, widows and immigrants – Deuteronomy 10: Deuteronomy-10
     - God’s law of love for the poor and those in debts - Deuteronomy 15: Deuteronomy-15
     - Ruth’s love for Naomie – Ruth 1: Ruth-1
