--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -28,7 +28,7 @@ Faith:
     - God tests Abraham's faith - Genesis 12: Genesis-12
     - God tests Isaac's faith - Genesis 26: Genesis-26
     - God tests Joseph's faith - Genesis 39: Genesis-39
-    - God tests Jacob's family - Genesis 42: Genesis:42
+    - God tests Jacob's family - Genesis 42: Genesis-42
     - Joseph tests his brothers - Genesis 44: Genesis-44
     - God tests the Jews in Egypt - Exodus 5: Exodus-5
     - God tests the Jews in the wilderness - Exodus 17: Exodus-17
@@ -40,7 +40,7 @@ Faith:
     - David's testing as king - 2 Samuel 24: 2-Samuel-24
     - Elijah's testing in the wilderness (Part I) - 1 Kings 17: 1-Kings-17
     - Elijah's testing in the wilderness (Part II) - 1 Kings 19: 1-Kings-19
-    - Micaiah testing in speaking God's Word - 1 Kings 22: 1-Kinds-22
+    - Micaiah testing in speaking God's Word - 1 Kings 22: 1-Kings-22
     - Elijah tests Elisha before his rapture - 2 Kings 2: 2-Kings-2
 Spiritual Renewal:
   Spiritual Renewal / Transformation:
@@ -53,7 +53,7 @@ Spiritual Renewal:
     - Lessons on transformation from the circumcision – Leviticus 12: Leviticus-12
     - Seven signs of a transformed believer – Leviticus 19: Leviticus-19
     - Spiritual renewal through God’s holy days - Numbers 28:1-15: Numbers-28.1-15
-    - Joshua leads a spiritual renewal – Joshua 6:
+    - Joshua leads a spiritual renewal – Joshua 6: Joshua-6
     - God transform Naomi’s bitter heart - Ruth 2: Ruth-2
     - The seven stages of a believer’s transformation - 1 Samuel 10: 1-Samuel-10
     - DSeven lessons on spiritual renewal from David’s wilderness victory – 1 Samuel 30: 1-Samuel-30
@@ -257,7 +257,7 @@ Service:
   Love and Compassion:
     - Abraham’s compassion for strangers – Genesis 18: Genesis-18
     - Joseph’s compassion in jail – Genesis 40: Genesis-40
-    - God’s law of love for immigrants, the poor and strangers - Exodus 22:21: Exodus-22.21
+    - God’s law of love for immigrants, the poor and strangers - Exodus 22:21: Exodus-22
     - God’s law of love for orphans, widows and immigrants – Deuteronomy 10: Deuteronomy-10
     - God’s law of love for the poor and those in debts - Deuteronomy 15: Deuteronomy-15
     - Ruth’s love for Naomie – Ruth 1: Ruth-1
@@ -378,7 +378,7 @@ Spiritual Warfare:
     - Spiritual warfare lessons from Israel’s civil war (Part VIII) - 2 Samuel 2: 2-Samuel-2
     - Spiritual warfare lessons from David’s victories (Part IX) - 2 Samuel 10: 2-Samuel-10
     - Spiritual warfare lessons from the war against Moab (Part X) - 2 Kings 3: 2-Kings-3
-    - Spiritual warfare lessons from Elisha (Part XI) - 2 Kings: 2-Kings
+    - Spiritual warfare lessons from Elisha (Part XI) - 2 Kings: 2-Kings-6
 Stewardship:
   Lessons on Tithing:
     - "Abraham’s tithes - Genesis 14": Genesis-14
@@ -431,7 +431,7 @@ Attributes of God:
     - God’s fulfilled promises to Abraham – Joshua 1: Joshua-1 
     - God’s fulfilled promise in making David king - 2 Samuel 5: 2-Samuel-5
     - God fulfills His land promises through David - 2 Samuel 8: 2-Samuel-8 
-    - David’s praise for God’s faithfulness  - Samuel 22: Samuel-22
+    - David’s praise for God’s faithfulness  - Samuel 22: 1-Samuel-22
     - God’s faithfulness during Judah’s unfaithfulness – 2 Kings 8: 2-Kings-8
     - God’s faithfulness in protecting Judah – 2 Kings 19: 2-Kings-19
     - God’s faithfulness in preserving David’s line in exile – 2 Kings 25: 2-Kings-25
@@ -439,7 +439,7 @@ Attributes of God:
     - God’s faithfulness in freeing the Jews from captivity – Ezra 1: Ezra-1 
   God’s Mercy and Grace:
     - God’s mercy and grace on Jacob’s family - Genesis 49: Genesis-49 
-    - God’s mercy and grace after the Jews six rebellions – Exodus 17: 
+    - God’s mercy and grace after the Jews six rebellions – Exodus 17: Exodus-17
     - God’s mercy and grace after the golden calf – Exodus 34: Exodus-34
     - God’s mercy and grace on the 12 tribes – Numbers 1:17-54: Numbers-1.17-54
     - God’s mercy and grace in the red heifer – Numbers 19: Numbers-19
@@ -577,7 +577,7 @@ End Times:
     - End time revelations from Pharaoh’s judgment - Exodus 15: Exodus-15
     - End time Tabernacle revelations on the Millennial Reign - Exodus 35: Exodus-35
     - End time revelations from Balaam’s prophecies - Numbers 23-24: Numbers-23-24
-    - End time revelations from the Midianites’ judgement - Numbers 31: Numbers 31
+    - End time revelations from the Midianites’ judgement - Numbers 31: Numbers-31
     - End time revelations from Jericho’s judgment - Joshua 6: Joshua-6
     - End time revelations from Joshua’s battle for Northern Israel - Joshua 11: Joshua-11
     - End time revelations from the Amorites’ judgment - Joshua 10: Joshua-10
