Add Nehemiah books in topic index

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -13,11 +13,11 @@ Faith:
     - David's faith in the wilderness against a Phillistine army - 1 Samuel 23: 1-Samuel-23
     - Elijah’s faith against Ahab and the prophets of Baal – 1 Kings 18: 1-Kings-18
     - Elisha’s faith against the Aramean army – 2 Kings 6: 2-Kings-6
-    - Hezekiah’s faith against the Assyrian army– 2 Chronicles 32: 2-Chronicles-32
+    - Hezekiah’s faith against the Assyrian army – 2 Chronicles 32: 2-Chronicles-32
   Patience:
     - Abraham’s 100-year wait for God’s promised son - Genesis 21: Genesis-21
     - Isaac’s 20-year wait for his promised son - Genesis 25: Genesis-25
-    - The Jews’ failure to wait 40 days for Moses –- Exodus 32: Exodus-32
+    - The Jews’ failure to wait 40 days for Moses - Exodus 32: Exodus-32
     - Joshua's patience in waiting on God - Exodus 33: Exodus-33
     - Being patient for God's timing - Deuteronomy 7: Deuteronomy-7
     - Hannah waits on God's promise - Samuel 1: 1-Samuel-1
@@ -60,9 +60,11 @@ Spiritual Renewal:
     - God’s transformation of the leper Naaman - 2 Kings 5: 2-Kings-5
     - Asa leads a spiritual renewal – 2 Chronicles 15: 2-Chronicles-15
     - Hezekiah leads a spiritual renewal – 2 Chronicles 29: 2-Chronicles-29
-    - Josiah leads a spiritual renewal – 2 Chronicles 34: 2-Chronicles-34
     - Seven lessons on the evidence of a nation’s spiritual renewal - 2 Chronicles 31: 2-Chronicles-31
+    - Josiah leads a spiritual renewal – 2 Chronicles 34: 2-Chronicles-34
     - Seven lessons from Ezra on leading a nation in spiritual renewal – Ezra 10: Ezra-10
+    - Lessons from Nehemiah on finding spiritual renewal  – Nehemiah 8: Nehemiah-8
+    - Lessons from Nehemiah on why spiritual revivals fail – Nehemiah 13: Nehemiah-13
   Humility / Meekness:
     - Jacob’s humility before God – Genesis 31: Genesis-31
     - Moses’ humility before God – Numbers 11: Numbers-12
@@ -110,6 +112,7 @@ Spiritual Renewal:
     -	From David, seven lessons on finding fellowship with God - 1 Chronicles 15: 1-Chronicles-15
     -	Seven signs of a person walking in faithful fellowship with God -1 Chronicles 28: 1-Chronicles-28
     -	Seven lessons from the Temple on maintaining God’s fellowship - 2 Chronicles 5: 2-Chronicles-5
+    - Lessons from Nehemiah on maintaining a covenant relationship – Nehemiah 10: Nehemiah-10
 Discipleship:
   Following Jesus’ Ten Commandments:
     - Prelude to Jesus’ Ten Commandments - Exodus 19: Exodus-19
@@ -271,6 +274,7 @@ Service:
     - God’s compassion for Elijah in the wilderness (Part I) – 1 Kings 17: 1-Kings-17
     - God’s compassion for Elijah in the wilderness (Part II) – 1 Kings 19: 1-Kings-19
     - Elisha teaches the Jews to find peace through compassion – 2 Kings 6: 2-Kings-6
+    - Lessons from Nehemiah on helping the poor and oppressed – Nehemiah 5: Nehemiah-5
   Service, Sacrifice and Charity:
     - Isaac’s submission to be sacrificed – Genesis 22: Genesis-22
     - Joseph’s service in jail – Genesis 40: Genesis-40
@@ -312,6 +316,7 @@ Leadership:
     - Seven lessons on being a Spirit-led leader from Solomon - 1 Kings 2: 1-Kings-2
     - Seven lessons on using God’s wisdom to lead - 1 Kings 4: 1-Kings-4
     - Seven lessons of leaders to stay on a Spirit-led walk - 1 Kings 9: 1-Kings-9
+    - Lessons on Spirit-led leadership from Nehemiah – Nehemiah 2: Nehemiah-2
   Selecting Leaders / Delegation:
     - Lessons on delegation and avoiding ministry burnout - Exodus 18: Exodus-18
     - Principles for selecting replacement leaders – Numbers 27: Numbers-27
@@ -325,7 +330,7 @@ Leadership:
     - Warnings regarding leadership from the Judges - Judges 12: Judges-12
     - Seven warnings from Saul about ungodly leaders (Part I) - 1 Samuel 13: 1-Samuel-13
     - Seven warnings from Saul about rebellious leaders (Part II) - 1 Samuel 31: 1-Samuel-31
-    - Seven from Rehoboam and Jeroboam on foolish leaders - 1 Kings 12: 1-Kings-12
+    - Warnings from Rehoboam and Jeroboam on foolish leaders - 1 Kings 12: 1-Kings-12
     - Seven warnings regarding rebellious leaders - 1 Kings 15: 1-Kings-15
     - Lessons on leadership from Amaziah and Jeroboam II’s mistakes - 2 Kings 14: 2-Kings-14
 Prayer:
@@ -348,6 +353,7 @@ Prayer:
     - Elisha’s prayers resurrect dead boy–  2 Kings 4: 2-Kings-4
     - Hezekiah’s prayers save Judah – 2 Kings 19: 2-Kings-19
     - Josiah’s prayers delay Judah’s judgement – 2 Kings 22: 2-Kings-22
+    - Lessons from Nehemiah on intercessory prayer – Nehemiah 1: Nehemiah-1
 Worship:
   Worship:
     - Noah’s altar of gratitude - Genesis 8: Genesis-8
@@ -367,6 +373,7 @@ Worship:
     - Seven revelations about God’s holy character from Kings - 2 Kings 8: 2-Kings-8
     - Seven things God wants from your worship - 1 Chronicles 25: 1-Chronicles-25
     - Seven reasons to praise God from Solomon’s prayer - 2 Chronicles 6: 2-Chronicles-6
+    - Lessons from Nehemiah on the elements of true worship – Nehemiah 12: Nehemiah-12
 Spiritual Warfare:
   Lessons on Spiritual Warfare:
     - Spiritual warfare lessons from Moses (Part II) - Deuteronomy 20: Deuteronomy-20
@@ -379,6 +386,8 @@ Spiritual Warfare:
     - Spiritual warfare lessons from David’s victories (Part IX) - 2 Samuel 10: 2-Samuel-10
     - Spiritual warfare lessons from the war against Moab (Part X) - 2 Kings 3: 2-Kings-3
     - Spiritual warfare lessons from Elisha (Part XI) - 2 Kings: 2-Kings-6
+    - Spiritual warfare lessons from Nehemiah (Part XII) – Nehemiah 4: Nehemiah-4
+    - Spiritual warfare lessons from Nehemiah (Part XIII) – Nehemiah 6: Nehemiah-6
 Stewardship:
   Lessons on Tithing:
     - "Abraham’s tithes - Genesis 14": Genesis-14
@@ -401,6 +410,7 @@ Jesus in the Old Testament:
     - Jesus in the Succoth / Tabernacles (His Birthday) - Numbers 29:12-40: Numbers-29.12-40
     - Jesus in the second Passover – Numbers 9: Numbers-9
     - Josiah’s spiritual renewal with the Passover – 2 Chronicles 35: 2-Chronicles-35
+    - The foreshadow of Jesus in the gates of Jerusalem – Nehemiah 3: Nehemiah-3
   The Foreshadow of Jesus in the Tabernacle:
     - Jesus in the Outer Courtyard / Atonement - Exodus 27: Exodus-27
     - Jesus in Tent of Meeting  / Sanctification – Exodus 26: Exodus-26
@@ -487,6 +497,11 @@ Attributes of God:
     - God delivers David’s line from Athaliah’s attempt to kill them – 2 Kings 11: 2-Kings-11
     - God delivers Judah from the Assyrian army – 2 Kings 19: 2-Kings-19
     - From Jehoshaphat, seven lessons on God’s deliverance - 2 Chronicles 20: 2-Chronicles-20
+  God’s Holiness:
+    - Honoring God’s holiness with a holy life – Leviticus 19: Leviticus-19 
+    - Keeping God’s names holy - Deuteronomy 5:11: Deuteronomy-5.11
+    - Praising God’s holiness – 2 Chronicles 7: 2-Chronicles-7
+    - Worshiping God’s holiness – Nehemiah 9: Nehemiah-9
   God’s Blessings:
     - Lessons on God’s blessings from Israel’s blessings to Joseph- Genesis 48: Genesis-48
     - Lessons on God’s blessings from Israel’s blessings to the 12 tribes - Genesis 49: Genesis-49
@@ -663,6 +678,8 @@ Sin:
     - Ahaz doubts God and forms an alliance with the Assyrians – 2 Kings 16: 2-Kings-16
     - Hezekiah doubts God and turns to Babylonian – 2 Kings 20: 2-Kings-20
     - Judah’s leaders doubt God and turn to Egypt – 2 Kings 24: 2-Kings-24
+    - Satan’s use of discouragement to delay the Temple – Ezra 4: Ezra-4
+    - Satan’s use of discouragement against Nehemiah – Nehemiah 4: Nehemiah-4
   Cruelty / Strife / Oppression:
     - Joseph’s brothers sell him into slavery – Genesis 37 : Genesis-37
     - Judah’s threat to burn Tamar – Genesis 38: Genesis-38
