Add aplogetic letters to index

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -580,6 +580,9 @@ Apologetics:
     - Proof of the Trinity – Genesis 5: Genesis-5
     - Proof of Jesus in the ordering of the 12 tribes in the wilderness - Numbers 2: Numbers-2
     - Response to the Documentary Hypothesis – Deuteronomy 1: Deuteronomy-1
+  Apologetics Regarding Other Religions / Cults:
+    - Christian Response to a Jehovah Witness regarding the Trinity - letter: Trinity
+    - Christian Response to Christian Response to Paramahansa Yogananda, the Self-Realization Fellowship and Reincarnation - essay: Christian-Response-to-Paramahansa-Yogananda
 End Times:
   End Time Revelations:
     - End time revelations from the Flood - Genesis 7:  Genesis-7
